syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.helloworld.grpc";
option java_outer_classname= "HelloWorldProto";

message HelloReply {
  string message = 1;
}

message HelloRequest {
  string name = 1;
}

message Name {
  string name = 1;
}

message MyName {
  string message = 1;
}

service HelloWorld {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
  rpc SayMyName(Name) returns (MyName){}
}